# mira

./: .gitignore  README.md  demo.mi  execute.py  literals.py  mira  mira-lsp  parse.py
src/: execute.py  lsp.py  parse.py  repl.py  run.py
src/lsp/: main.py
src/tests/test_executor/: test_callable.py  test_math.py  test_vars.py
src/tests/test_parser/: test_parse_atom.py  test_parse_callable_def.py  test_parse_echo.py  test_parse_factor.py  test_parse_int.py  test_parse_vardef.py  test_parse_varset.py
tests/test_executor/: test_math.py  test_vars.py
tests/test_parser/: test_parse_expr.py  test_parse_float.py  test_parse_identifier.py  test_parse_term.py
tree-sitter-mira/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter-mira/bindings/node/: binding.cc  index.js
tree-sitter-mira/bindings/rust/: lib.rs
tree-sitter-mira/src/: grammar.json  node-types.json  parser.c
tree-sitter-mira/test/corpus/: test_comment  test_math
typings/pyparsing/: __init__.pyi  actions.pyi  common.pyi  core.pyi  exceptions.pyi  helpers.pyi  results.pyi  testing.pyi  unicode.pyi  util.pyi
typings/pyparsing/diagram/: __init__.pyi
